	NX-1271 (Implemented internal server topology)
	NX-1386 (Implemented units for Server Variables)


*
* 2.2.9
*

- New NXSL functions: Base64Decode, Base64Encode, EventCodeFromName, EventNameFromCode
- Original event name passed to alarm timeout event as 5th parameter
- Added information tooltips in switch port view
- Improved performance of active network discovery
- Fixed issues:
	NX-1486 (NXSL function CreateDCI should allow creation with default retention and poll intervals)
	NX-1489 (Unreliable MariaDB Connector/C version detection in workaround for MariaDB bug CONC-281)
	NX-1494 (Release 2.2.8 failed to compile on macOS)
	NX-1496 (Add agent parameters System.Memory.Physical.Available and System.Memory.Physical.AvailablePerc on FreeBSD)
	NX-1501 (In test mode $dci variable is not set)
	NX-1502 (Configuration poll resets SNMP version on node)
	NX-1503 (Access denied error on attempt to take screenshot even if user has take screenshot access right)
	NX-1504 (Server crash after compiling library script with syntax error)
	NX-1505 (Assignment in NXSL "global" statement ignored if variable already declared as global)
	NX-1510 (Agent list Net.InterfaceNames not supported on FreeBSD)


*
* 2.2.8
*

- Delayed actions in event processing policy
- Raw event data stored in event log
- New hook scripts: PostObjectCreate and DiscoveryPoll
- Implemented watchdog functionality for external subagents
- SNMP port and context can be specified in NXSL function CreateSNMPTransport
- Fixed Summary DCI table fail when row limit set
- Fixed menu path creation for Summary DCI Table and folder creation for graph view
- New command line options for Windows agent installer: /FORCECREATECONFIG, /LOGFILE=, /FILESTORE=, /CONFIGINCLUDEDIR=
- Server optimization for high load
- Fixed SQL errors during database import or migration
- New dashboard element "Port view"
- Fixed issues:
	NX-1186 (WebUI does not show objects on geo map)