@@ -25,6 +25,7 @@
 - Added information tooltips in switch port view
 - Improved performance of active network discovery
 - Fixed issues:
+	NX-1475 (Deselected "Create helpdesk ticket on alarm creation" is not being saved in EPP)
 	NX-1486 (NXSL function CreateDCI should allow creation with default retention and poll intervals)
 	NX-1489 (Unreliable MariaDB Connector/C version detection in workaround for MariaDB bug CONC-281)
 	NX-1494 (Release 2.2.8 failed to compile on macOS)
